Fixed scrollbar appearing when sidebar is hidden

--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -25,6 +25,7 @@ $views-tab-cutoff: 840px;
   right: 0;
   bottom: 0;
   clear: both;
+  overflow-x: hidden;
 }
 
 .views-main {
